# NaanStop

./: db.sqlite3
Naanstop/: README.md  db.sqlite3  main.py  manage.py  pyproject.toml
Naanstop/core/: views.py
Naanstop/home/: models.py  urls.py  views.py
Naanstop/home/migrations/: 0001_initial.py
Naanstop/home/templates/home/: index.html  post_list.html
Naanstop/scroll/: asgi.py  settings.py  urls.py  wsgi.py
authy/: urls.py  views.py
ig_prj/: settings.py
templates/: base.html  profile.html  sign-in.html  sign-out.html  sign-up.html
