[tool.poetry]
name = "naanstop"
version = "0.1.0"
description = ""
authors = ["Shaurya Singh <1272251359@mitwpu.edu.in>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"
django-htmx = "^1.18.0"
fastapi = "^0.120.4"
uvicorn = "^0.38.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
